use templateview successfully

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,6 +2,7 @@
 exclude =
 	.git,
 	*migrations/*,
+	*frontend/*
 	manage.py,
 	.tox,
 	./pollsapi/settings/*.py
@@ -16,13 +17,15 @@ known_first_party=pollsapi, polls
 multi_line_output = 3
 not_skip = __init__.py
 lines_after_imports = 2
+skip_glob = **/migrations/**
 skip =
 	manage.py
-	*migrations/*
+	*/migrations/*
+	*frontend/*
 
 [coverage:run]
 omit =
 	*migrations/*,
 	manage.py,
-	product_comparison/settings/*.py
-	compare/apps.py
+	pollsapi/settings/*.py
+	polls/apps.py
