--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --proxy-config proxy.conf.json",
-    "build": "ng build --prod --watch --base-href /static",
+    "build": "ng build --prod --base-href=/static/frontend/",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
