--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --proxy-config proxy.conf.json",
+    "start": "ng serve --host 0.0.0.0 --poll=2000 --proxy-config proxy.conf.json",
     "build": "ng build --prod --base-href=/static/frontend/",
     "docker-build": "ng build --prod --watch --base-href=/static/frontend/",
     "test": "ng test",
